# behelink

./: .gitignore  HARNESS-DIVERGENCES.md  README.md  deploy.md  pyproject.toml
docs/superpowers/plans/: 2026-07-21-behelink-holepunch-signaling.md  2026-07-21-behelink-service.md
docs/superpowers/plans/handoffs/: 2026-07-21-behelink-holepunch-signaling-handoff.md  2026-07-21-behelink-service-handoff.md
docs/superpowers/specs/: 2026-07-21-behelink-holepunch-signaling-design.md  2026-07-21-behelink-hosted-relay-design.md
src/behelink/: __init__.py  __main__.py  clock.py  config.py  db.py  errors.py  main.py  pending_connect.py  ratelimit.py  reflector.py  tokens.py
tests/: conftest.py  test_db.py  test_errors.py  test_heartbeat.py  test_manage.py  test_pending_connect_endpoint.py  test_pending_connect_store.py  test_ratelimit.py  test_reflector.py  test_register.py  test_request_connect.py  test_resolve.py  test_tokens.py
